# codex-wrapper

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  dependencies.yml  quick-check.yml  release-plz.yml
crates/codex-wrapper/: Cargo.toml  README.md
crates/codex-wrapper/src/: error.rs  exec.rs  lib.rs  retry.rs  session.rs  streaming.rs  types.rs  version.rs
crates/codex-wrapper/src/command/: apply.rs  completion.rs  exec.rs  features.rs  fork.rs  login.rs  mcp.rs  mcp_server.rs  mod.rs  raw.rs  resume.rs  review.rs  sandbox.rs  version.rs
crates/codex-wrapper/tests/: fake-codex-bad-json.sh  fake-codex.sh  integration.rs
