[workspace]
resolver = "3"
members = ["crates/codex-wrapper"]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/codex-wrapper"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

