[package]
name = "codex-wrapper"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A type-safe Codex CLI wrapper for Rust"
documentation = "https://docs.rs/codex-wrapper"
readme = "README.md"
keywords = ["codex", "cli", "wrapper", "ai", "mcp"]
categories = ["development-tools", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
serde = { workspace = true }
serde_json = { version = "1", optional = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["process", "time", "io-util", "macros"] }
tracing = { workspace = true }
which = "8"

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true }
